# layabout

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  dev-requirements.txt  layabout.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
docs/: Makefile  api.rst  conf.py  deprecation.rst  index.rst  layabout.rst  modules.rst  why.rst
docs/_templates/: sidebar.html
examples/: README.md  README.rst
examples/conditional-exit/: example.py  pyproject.toml  setup.py
examples/early-connection/: Pipfile  example.py  pyproject.toml  setup.py
examples/runtime-handler-definition/: example.py  pyproject.toml  setup.py
examples/runtime-handler-definitions/: setup.py
examples/simple/: Pipfile  example.py  pyproject.toml  setup.py
tests/: test_layabout.py
