[tool.poetry]
name = "layabout"
version = "1.0.1"
description = "A small event handling library on top of the Slack RTM API."
readme = "README.rst"
authors = ["Reilly Tucker Siemens <reilly@tuckersiemens.com>"]
repository = "https://github.com/reillysiemens/layabout"
documentation = "https://layabout.readthedocs.io/en/latest"
license = "ISC"
keywords = ["Slack", "RTM", "API", "Bot", "Framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.6"
slackclient = "~1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
