[tool.poetry]
name = "example"
version = "0.1.0"
description = "A runtime handler definition Layabout example."
authors = ["Reilly Tucker Siemens <reilly@tuckersiemens.com>"]

[tool.poetry.dependencies]
python = "^3.6"
layabout = { path = "../../" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
